--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 			<div class="fh5co-top-menu menu-1 text-center">
 				<ul>
 					<li class="active"><a href="index.html">Portfolio</a></li>
-					<li><a href="resume.html">Resume</a></li>
-					<li><a href="inthemedia.html">In the media</a></li>
-					<li><a href="contact.html">Get in touch</a></li>
+					<li><a href="http://www.linkedin.com/in/jillekuipers">Resume</a></li>
+					<!-- <li><a href="inthemedia.html">In the media</a></li>
+					<li><a href="contact.html">Get in touch</a></li> -->
 				</ul>
 			</div>
 
@@ -95,7 +95,7 @@
 					<div class="desc animate-box">
 						<span></span>
 							<p>Hi, I'm Jille. Welcome to my portfolio.<br>I'm a experienced Product/Research manager, leading engineers, designers and scientists to make something that people want. I am co-founder of a startup to Bring Light to Life.</p>
-						<p><a href="resume.html" class="btn btn-primary btn-outline">View resume</a></p>
+						<!-- <p><a href="resume.html" class="btn btn-primary btn-outline">View resume</a></p> -->
 						<ul class="fh5co-social-icons">
 							<li><a href="https://www.linkedin.com/in/jillekuipers"><i class="icon-linkedin"></i></a></li>
 							<li><a href="mailto:hello@jillekuipers.com"><i class="icon-mail"></i></a></li>
@@ -584,18 +584,18 @@
 					</a>
 				</div>
 
-	<div id="fh5co-started">
+	<!-- <div id="fh5co-started">
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>End-user product development</h2>
-					<p>If you would like to collaborate, please feel free to reach out.
+					<h2>How can I help you?</h2>
+					<p>Please feel free to reach out.
 						</p>
 					<p><a href="contact.html" class="btn btn-primary">contact Jille</a></p>
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<footer id="fh5co-footer" role="contentinfo">
 		<div class="container">
