--- a/resume.html
+++ b/resume.html
@@ -94,31 +94,36 @@
 	    <div class="col-md-8 col-md-offset-2">
         <p> <a href="inthemedia/ResumeJilleKuipers.pdf"target="_blank"> Download Resume and Portfolio (pdf)</a>.</p>
 
-                    <p><strong>Marketing innovation manager</strong></p>
                     <p><strong>Summary</strong></p>
-		  <p> 	Marketing innovation manager, strong at identifying market opportunities to enhance product portfolio and create value for people and businesses. Managed regional innovation program and portfolio for business segments such as hospitality, industry and homes.				</p>
-		  <p>As a marketing innovation manager, I created and delivered end-to-end propositions for new products, services or systems. I initiated projects and was responsible for project budgets and transferring Idea to Market. I managed global cross-functional and cross-organizational teams. Additionally I identified partners for innovation to drive the innovation roadmap, speed up time to market and integrate end-to-end.				</p>
-		  <p>Prior to the marketing innovation role, I managed pricing for a product portfolio as a pricing officer. I improved the portfolio management and gross margins through new pricing methodologies, analysis and provided training to product marketers.</p>
-          <p><font style="color:#DE0041">With a background in economics, business administration and marketing I combine deep business performance insights and evolving market opportunities to develop the best portfolio that drives sales and outperforms competition through product- market fit and innovation.</font> </p>
+		  <p>Experienced product innovation manager, I managed the Asia-Pacific innovation program for business segments; hospitality, industry and homes.</p>
+		  <p>Created and delivered propositions for new products or services. I initiated projects, managed project budgets, managed cross-functional teams and activated lead-customers to speed up time to market and end-to-end integration.</p>
+		  <p>I have also managed pricing for a 300M EUR product portfolio. I improved the portfolio and gross margins with new pricing methodologies, analysis and competence development.</p>
+          <p><font style="color:#DE0041">I explore and deliver a product portfolio that drives sales and customer success through product- market fit and innovation.</font> </p>
 
 
 
                     <p><strong>RESUME</strong></p>
-                    <p><strong><font style="color:#DE0041">Marketing director and Start-up founder, DESIGN INDULGENCE, </font></strong>HONG KONG 2016-present <br>
+                    <p><strong><font style="color:#DE0041">Innovation manager | co-founder, LUXBALANCE, </font></strong>HONG KONG 2019-present <br>
                     </p>
                     <p><strong>Responsibilities</strong> <br>
-                      <strong>Member of Management Team</strong> at Design Indulgence leading marketing and project management. <br>
+                      <strong>Member of Management Team</strong> at LUXBALANCE.<br>
                     </p>
-                    <p><strong>Defining Idea-to-Market approach</strong> including business model, brand, market analysis, competitive benchmarking, translating user needs (emotional and functional) into brand characteristic and user specifications on technology, scouting partners in innovation (distribution and production), developing marcom touch points, pricing waterfall, business simulation and channel development.&nbsp; <br>
+
+                    <p><strong><font style="color:#DE0041">Marketing innovation manager, DESIGN INDULGENCE, </font></strong>HONG KONG 2016-2019 <br>
                     </p>
+                    <p><strong>Responsibilities</strong> <br>
+                      <strong>Marketing and project management</strong> at Design Indulgence. <br>
+                    </p>
+                    <!-- <p><strong>Defining Idea-to-Market approach</strong> including business model, brand, market analysis, competitive benchmarking, translating user needs (emotional and functional) into brand characteristic and user specifications on technology, scouting partners in innovation (distribution and production), developing marcom touch points, pricing waterfall, business simulation and channel development.&nbsp; <br>
+                    </p> -->
                     <p><strong>Key projects:</strong> <br>
-                      <strong>Sound Art-Works: </strong>a design proposition to &lsquo;connect you with more than Sound&rsquo;.  This is a high-end HomeAudio system that delivers a totally new proposition to invigorate a mature market. Together with design I worked on the full idea-to-market approach. <br>
+                      <strong>Sound Art-Works: </strong>a design proposition to create crafted moments of beauty.<br>
                     </p>
-                    <p><strong>American Audio YOU: </strong>a multi-room wireless speaker product family to affirm that &lsquo;anytime with music it is better&rsquo;. Conducted market research, developed business case and validated the proposition at the largest trade show in Asia. This range is the first category for the consumer line at the professional entertainment brand. <br>
+                    <p><strong>American Audio YOU: </strong>a multi-room wireless speaker product family to affirm that &lsquo;anytime with music it is better&rsquo;. <br>
                     </p>
-                    <p><em>Design Indulgence is a design start-up in Hong Kong. It creates crafted moments of beauty. Its HomeAudio products were shown at the CES2016, NAMM2016, HES2016 and HKTDC2017.</em> <br>
+                    <p><em>HomeAudio products were shown at the CES, NAMM and HES.</em> <br>
                     </p>
-                    <p><strong><font style="color:#DE0041">Segment innovation manager and Project manager, PHILIPS LIGHTING, </font></strong>SHANGHAI, CHINA 2012 – 2016 <br>
+                    <p><strong><font style="color:#DE0041">Segment innovation manager and Project manager, PHILIPS, </font></strong>SHANGHAI, CHINA 2012 – 2016 <br>
                     </p>
                     <p><strong>Responsibilities</strong> <br>
                       <strong>Identify and develop new system-, service- and product-portfolio </strong>for new markets with sales potential of 5M-25M EUR and drive a regional innovation program targeting 100M EUR sales value. <br>
@@ -190,18 +195,13 @@
                       <p>Present council member at Univé. Approve the annual financial reports and appoint board members and board of directors. </p>
                       <p><em>The 20 council members represent one million members at a Dutch insurance cooperative. </em></p>
 
-                      <p><strong><font style="color:#DE0041">WORK VISA </font></strong><br>
-                      European Union <br>
-                      Hong Kong <br>
-                      China <br></p>
-
 											<p><strong><font style="color:#DE0041">PERSONAL</font></strong><br>
                       Strong conceptual thinker with analytic background to drive decisions based on solid business rationale<br>
-											Effective communication skills with influencing ability and understanding of organizational dynamics <br>
-                      I thrive in dynamic environments that also have a large degree of complexity and uncertainty.<br></p>
-											<p>• Take ownership: I take initiative and deliver upon my professional commitments to the business, my team and projects within given budget and time frame.<br>
-											• Eager to win: with great enthusiasm I will take on new challenges. I have a strong ability to learn new things, develop strategic insights and achieve organizational goals.<br>
-											• Team-up to excel: I am able to start and lead teams in any setting, across organizations, functions and markets. I easily establish work-based relationships, empower my team, work well with peers and ensure my work is consistent with the organizational objectives and market needs<br></p>
+											Effective communication skills with ability to get things done <br></p>
+											<p>• I take ownership and deliver upon my professional commitments.<br>
+											• I am eager to win: Ability to learn new things and achieve goals.<br>
+											• I team-up to excel: Able to start and lead teams in any setting, across organizations, functions and markets. I establish good work-based relationships with all stakeholders<br>
+                      • I act with integrity. <br></p>
 
                     <p><strong>CAPABILITIES AND SKILLS</strong></p>
           <p><font style="color:#BFBFBF">MARKETING/ FINANCE </font><br></p>
@@ -210,11 +210,6 @@
                       - Business planning <br>
                       - Product management <br>
                       - Market and user research <br>
-                      - Decision making model <br>
-                      - Market Segmentation and product-market fit <br>
-                      - Develop Value proposition <br>
-                      - Market validation <br>
-                      - Voice of customer research &amp; User requirements on technology<br>
                       - User experience research &amp; design (UX) <br>
                       - Develop Business case <br>
                       - Pricing management (pricing setting, strategy, analysis) <br>
@@ -222,15 +217,14 @@
     				<p><font style="color:#BFBFBF">MARKETING/ CONSULTING</font> <br></p>
                       <p>Innovation management <br>
 
-                      - Develop strategic insights <br>
+                      - Develop strategic end-user insights <br>
                       - Create New product Roadmap <br>
-                      - Create pilot projects <br>
+                      - Create pilot projects<br>
                       - Identify partners in innovation <br>
-                      - Manage claim/ differentiation development and design <br>
+                      - Manage claim-development and design <br>
                       - Drive Design Thinking methodology <br>
-                      - Lead application research <br>
                       - Explore new value-spaces and emerging technologies <br>
-                      - Program management for coherent and business relevant innovation portfolio <br></p>
+                      - Program management for attractive innovation portfolio <br></p>
           <p><font style="color:#BFBFBF">MANAGEMENT </font><br></p>
                       <p>Project management <br>
                       - Start and execute projects using agile-, lean-, scrum- and traditional project management methodology <br>
@@ -249,8 +243,8 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>May I help you?</h2>
-					<p>Marketing Innovation manager with substantial experience managing and leading new products and service development, voice of customer research and UX, portfolio management, market research, project management, innovation strategy, digital transformation. </p>
+					<h2>How can I help you?</h2>
+					<p>Feel free to reach out. </p>
 					<p><a href="contact.html" class="btn btn-primary">contact Jille</a></p>
 				</div>
 			</div>
