--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					</div>
 					<div class="desc animate-box">
 						<span></span>
-						<p>Hi, I'm Jille. Welcome to my portfolio.<br>I am a co-founder of a startup to Bring Light to Life. I'm an experienced Product/Research manager. I lead a team of engineers, designers and scientists to make something that people want.</p>
+						<p>Hi, I'm Jille. Welcome to my portfolio.<br>I am a co-founder of a startup to Bring Light to Life. As co-founder and product manager, I lead a team of engineers, designers and scientists to make something that people want.</p>
 						<!-- <p><a href="resume.html" class="btn btn-primary btn-outline">View resume</a></p> -->
 						<ul class="fh5co-social-icons">
 							<li><a href="https://www.linkedin.com/in/jillekuipers"><i class="icon-linkedin"></i></a></li>
