--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 			</div>
 			<div class="fh5co-top-menu menu-1 text-center">
 				<ul>
-					<li class="active"><a href="index.html">Portfolio</a></li>
-					<li><a href="http://www.linkedin.com/in/jillekuipers">Resume</a></li>
+					<!-- <li class="active"><a href="index.html">Portfolio</a></li> -->
+					<!-- <li><a href="http://www.linkedin.com/in/jillekuipers">Resume</a></li> -->
 					<!-- <li><a href="inthemedia.html">In the media</a></li>
 					<li><a href="contact.html">Get in touch</a></li> -->
 				</ul>
@@ -76,8 +76,8 @@
 
     		<div class="fh5co-top-social menu-1 text-right">
 				<ul class="fh5co-social">
-			<li><a href="http://www.linkedin.com/in/jillekuipers"><i class="fa fa-linkedin"></i></a></li>
-            <li><a href="mailto:hello@jillekuipers.com"><i class="fa fa-envelope"></i></a></li>
+					<li><a href="mailto:hi@jillekuipers.com"><i class="fa fa-envelope"></i></a></li>
+					<li><a href="http://www.linkedin.com/in/jillekuipers"><i class="fa fa-linkedin"></i></a></li>
             <li><a href="images/jillekuiperswechat.jpg"target="_blank" ><i class="fa fa-wechat"></i></a></li>
 
 				</ul>
@@ -97,8 +97,8 @@
 						<p>Hi, I'm Jille. Welcome to my portfolio.<br>I am a co-founder of a startup to Bring Light to Life. As co-founder and product manager, I lead a team of engineers, designers and scientists to make something that people want.</p>
 						<!-- <p><a href="resume.html" class="btn btn-primary btn-outline">View resume</a></p> -->
 						<ul class="fh5co-social-icons">
+							<li><a href="mailto:hi@jillekuipers.com"><i class="icon-mail"></i></a></li>
 							<li><a href="https://www.linkedin.com/in/jillekuipers"><i class="icon-linkedin"></i></a></li>
-							<li><a href="mailto:hello@jillekuipers.com"><i class="icon-mail"></i></a></li>
 				<li><a href="images/jillekuiperswechat.jpg"target="_blank"><i class="fa fa-wechat"style="color:#2887a0"></i></a>
 
 
@@ -605,9 +605,9 @@
 						<small class="block"> <a href="privacy.html" target="_blank">privacy policy &</a> <a href="copyrights.html" target="_blank">copyrights</a></small>
 					</p>
 	<ul class="fh5co-social-icons">
-		<li><a href="https://www.linkedin.com/in/jillekuipers"><i class="icon-linkedin"></i></a>
-	 	<li><a href="mailto:hello@jillekuipers.com"><i class="icon-mail"></i></a>
-        <li><a href="images/jillekuiperswechat.jpg"target="_blank"><i class="fa fa-wechat"style="color:#2887a0"></i></a>
+	 	<li><a href="mailto:hi@jillekuipers.com"><i class="icon-mail"></i></a>
+			<li><a href="https://www.linkedin.com/in/jillekuipers"><i class="icon-linkedin"></i></a>
+				<li><a href="images/jillekuiperswechat.jpg"target="_blank"><i class="fa fa-wechat"style="color:#2887a0"></i></a>
 
 				  </ul>
 
