--- a/index.html
+++ b/index.html
@@ -151,9 +151,33 @@
 					</a>
 				</div>
 
+				<div class="col-md-4 text-center animate-box">
+					<a class="work" href="https://www.hortidaily.com/article/9225467/improving-tissue-culture-quality-in-bananas-with-leds/">
+						<div class="work-grid" style="background-image:url(images/tissueculture.png);">
+							<div class="inner">
+								<div class="desc">
+								<h3>High quality planting material</h3>
+								<span class="cat">Tissue culture lighting</span>
+							</div>
+							</div>
+						</div>
+					</a>
+				</div>
 
 				<div class="col-md-4 text-center animate-box">
-					<a class="work" href="total_brand_experience.html">
+					<a class="work" href="https://iflextube.com/">
+						<div class="work-grid" style="background-image:url(images/waterprooflight.png);">
+							<div class="inner">
+								<div class="desc">
+								<h3>Design freedom</h3>
+								<span class="cat">Architectural light</span>
+							</div>
+							</div>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-4 text-center animate-box">
+					<a class="work" href="portfolio/SAW_booklet_2016.pdf">
 						<div class="work-grid" style="background-image:url(images/project-1.jpg);">
 							<div class="inner">
 								<div class="desc">
@@ -177,17 +201,31 @@
 					</a>
 				</div>
 				<div class="col-md-4 text-center animate-box">
-					<a class="work" href="light_as_a_service.html">
-						<div class="work-grid" style="background-image:url(images/project-3.jpg);">
+					<a class="work" href="https://www.unive.nl/overunive/governance/ledenraad">
+						<div class="work-grid" style="background-image:url(images/unive.jpg);">
 							<div class="inner">
 								<div class="desc">
-									<h3>Light as a Service (LaaS)</h3>
-									<span class="cat">Business model innovation</span>
+									<h3>Corporate governance</h3>
+									<span class="cat">2017 Council member</span>
 								</div>
 							</div>
 						</div>
 					</a>
 				</div>
+				<div class="col-md-4 text-center animate-box">
+					<a class="work" href="car_body_inspection_light.html">
+						<div class="work-grid" style="background-image:url(images/project-9.jpg);">
+							<div class="inner">
+								<div class="desc">
+									<h3>Car body inspection light</h3>
+									<span class="cat">Improve comfort & productivity with light</span>
+								</div>
+							</div>
+						</div>
+					</a>
+				</div>				
+
+
 				<div class="col-md-4 text-center animate-box">
 					<a class="work" href="guestroom_experience.html">
 						<div class="work-grid" style="background-image:url(images/project-4.jpg);">
@@ -200,7 +238,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="col-md-4 text-center animate-box">
+				<!-- <div class="col-md-4 text-center animate-box">
 					<a class="work" href="identifying_100m.html">
 						<div class="work-grid" style="background-image:url(images/project-5.jpg);">
 							<div class="inner">
@@ -211,7 +249,7 @@
 							</div>
 						</div>
 					</a>
-				</div>
+				</div> -->
 				<div class="col-md-4 text-center animate-box">
 					<a class="work" href="portfolio_management.html">
 						<div class="work-grid" style="background-image:url(images/project-6.jpg);">
@@ -248,19 +286,20 @@
 						</div>
 					</a>
 				</div>
+
 				<div class="col-md-4 text-center animate-box">
-					<a class="work" href="car_body_inspection_light.html">
-						<div class="work-grid" style="background-image:url(images/project-9.jpg);">
+					<a class="work" href="light_as_a_service.html">
+						<div class="work-grid" style="background-image:url(images/project-3.jpg);">
 							<div class="inner">
 								<div class="desc">
-									<h3>Car body inspection light</h3>
-									<span class="cat">Improve comfort & productivity with light</span>
+									<h3>Light as a Service (LaaS)</h3>
+									<span class="cat">Business model innovation</span>
 								</div>
 							</div>
 						</div>
 					</a>
-				</div>
-				<div class="col-md-4 text-center animate-box">
+				</div>				
+				<!-- <div class="col-md-4 text-center animate-box">
 					<a class="work" href="open_innovation.html">
 						<div class="work-grid" style="background-image:url(images/project-10.jpg);">
 							<div class="inner">
@@ -271,7 +310,7 @@
 							</div>
 						</div>
 					</a>
-				</div>
+				</div> -->
 				<div class="col-md-4 text-center animate-box">
 					<a class="work" href="sleepwell.html">
 						<div class="work-grid" style="background-image:url(images/project-11.jpg);">
@@ -343,7 +382,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="col-md-4 text-center animate-box">
+				<!-- <div class="col-md-4 text-center animate-box">
 					<a class="work" href="managing_golden_tail.html">
 						<div class="work-grid" style="background-image:url(images/project-17.jpg);">
 							<div class="inner">
@@ -354,7 +393,7 @@
 							</div>
 						</div>
 					</a>
-				</div>
+				</div> -->
 				<div class="col-md-4 text-center animate-box">
 					<a class="work" href="porfolio_segmentation_research.html">
 						<div class="work-grid" style="background-image:url(images/project-18.jpg);">
@@ -379,7 +418,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="col-md-4 text-center animate-box">
+				<!-- <div class="col-md-4 text-center animate-box">
 					<a class="work" href="capturing_brand_premium.html">
 						<div class="work-grid" style="background-image:url(images/project-20.jpg);">
 							<div class="inner">
@@ -390,8 +429,8 @@
 							</div>
 						</div>
 					</a>
-				</div>
-				<div class="col-md-4 text-center animate-box">
+				</div> -->
+				<!-- <div class="col-md-4 text-center animate-box">
 					<a class="work" href="positioning_enduser_pricing.html">
 						<div class="work-grid" style="background-image:url(images/project-21.jpg);">
 							<div class="inner">
@@ -402,7 +441,7 @@
 							</div>
 						</div>
 					</a>
-				</div>
+				</div> -->
 				<div class="col-md-4 text-center animate-box">
 					<a class="work" href="margin_analysis.html">
 						<div class="work-grid" style="background-image:url(images/project-22.jpg);">
@@ -427,7 +466,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="col-md-4 text-center animate-box">
+				<!-- <div class="col-md-4 text-center animate-box">
 					<a class="work" href="increasing_competitive_advantage.html">
 						<div class="work-grid" style="background-image:url(images/project-24.jpg);">
 							<div class="inner">
@@ -438,7 +477,7 @@
 							</div>
 						</div>
 					</a>
-				</div>
+				</div> -->
 				<div class="col-md-4 text-center animate-box">
 					<a class="work" href="next_gen_control.html">
 						<div class="work-grid" style="background-image:url(images/project-25.jpg);">
@@ -516,14 +555,14 @@
 						<div class="work-grid" style="background-image:url(images/project-31.jpg);">
 							<div class="inner">
 								<div class="desc">
-									<h3>New consumer line</h3>
+									<h3>New product category research</h3>
 									<span class="cat">American Audio</span>
 								</div>
 							</div>
 						</div>
 					</a>
 				</div>
-				<div class="col-md-4 text-center animate-box">
+				<!-- <div class="col-md-4 text-center animate-box">
 					<a class="work" href="businessmodel_simulation.html">
 						<div class="work-grid" style="background-image:url(images/project-32.jpg);">
 							<div class="inner">
@@ -534,7 +573,7 @@
 							</div>
 						</div>
 					</a>
-				</div>
+				</div> -->
 				<div class="col-md-4 text-center animate-box">
 					<a class="work" href="ideate_brainstorm.html">
 						<div class="work-grid" style="background-image:url(images/project-33.jpg);">
@@ -547,7 +586,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="col-md-4 text-center animate-box">
+				<!-- <div class="col-md-4 text-center animate-box">
 					<a class="work" href="mobile.html">
 						<div class="work-grid" style="background-image:url(images/project-34.jpg);">
 							<div class="inner">
@@ -558,7 +597,7 @@
 							</div>
 						</div>
 					</a>
-				</div>
+				</div> -->
 				<div class="col-md-4 text-center animate-box">
 					<a class="work" href="usecase_Blockchain_as_a_Service.html">
 						<div class="work-grid" style="background-image:url(images/project-35.jpg);">
