--- a/air.html
+++ b/air.html
@@ -1,6 +1,13 @@
 <!doctype html>
 <html>
 <head>
+      <script type="text/javascript">
+            (function(c,l,a,r,i,t,y){
+                c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+                t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+                y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+            })(window, document, "clarity", "script", "aas1yppa0p");
+        </script>      
 <meta charset="UTF-8">
 <title>Luchtkwaliteit Nederland (PM2,5)</title>
 </head>
