--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
 				<div class="author">
-					<div class="author-inner animate-box" style="background-image: url(images/jille.png);">
+					<div class="author-inner animate-box" style="background-image: url(images/jille_kuipers.jpg);">
 					</div>
 					<div class="desc animate-box">
 						<span></span>
@@ -118,6 +118,19 @@
 
 	<div id="fh5co-work">
 		<div class="container">
+				<div class="col-md-4 text-center animate-box">
+					<a class="work" href="https://www.luxbalance.com/en-hk/products/roomyou1">
+						<div class="work-grid" style="background-image:url(images/sensor.png);">
+							<div class="inner">
+								<div class="desc">
+								<h3>Positive Ageing</h3>
+								<span class="cat">Sensor for indoor wellbeing</span>
+							</div>
+							</div>
+						</div>
+					</a>
+				</div>
+
 				<div class="col-md-4 text-center animate-box">
 					<a class="work" href="https://www.hortidaily.com/article/9223697/growing-strawberries-indoors-in-vietnam/">
 						<div class="work-grid" style="background-image:url(images/farm.png);">
