--- a/website2/index.html
+++ b/website2/index.html
@@ -29,12 +29,13 @@
 
         <div class="lg:col-span-9 order-2 lg:order-1 space-y-8">
             <div class="inline-block px-3 py-1 text-xs font-semibold tracking-wider text-blue-600 uppercase bg-blue-100 rounded-full">
-                Innovation Manager & Co-Founder
+                Innovation & Technology Leader | Co-founder
             </div>
 
             <h1 class="text-4xl md:text-6xl lg:text-7xl font-bold tracking-tight text-slate-900 leading-[1.1]">
-                From <span class="text-blue-600">Strategic Vision</span> to science-backed and user-centric execution to drive growth.
+                <span class="text-blue-600">Bridging the gap </span>between strategic vision and <span class="text-blue-600">science-backed execution</span> to create products that <span class="text-blue-600"></span>people actually need.</span>
             </h1>
+
 
             <p class="text-xl md:text-2xl text-slate-600 max-w-3xl leading-relaxed">
                 Senior Project and Innovation Manager with 10+ years of global experience leading complex digital transformations for Fortune 500s.
