--- a/website2/index.html
+++ b/website2/index.html
@@ -33,7 +33,7 @@
             </div>
 
             <h1 class="text-4xl md:text-6xl lg:text-7xl font-bold tracking-tight text-slate-900 leading-[1.1]">
-                <span class="text-blue-600">Bridging the gap </span>between strategic vision and <span class="text-blue-600">science-backed execution</span> to create products that <span class="text-blue-600"></span>people actually need.</span>
+                <span class="text-blue-600">Bridging the gap </span>between strategic vision and <span class="text-blue-600">science-backed execution</span> to create products that <span class="text-blue-600">people actually need.</span>
             </h1>
 
 
