--- a/website2/index.html
+++ b/website2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jille Kuipers | Innovation & Technology Leader, Finance</title>
+    <title>Jille Kuipers Portfolio | Innovation & Technology Leader, Finance</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* System font stack for instant loading and native Apple feel */
@@ -55,7 +55,7 @@
                     <span class="text-sm text-slate-500 uppercase tracking-wide font-medium">Backed startup</span>
                 </div>
                 <div>
-                    <span class="block text-3xl font-bold text-slate-900">1.7MUSD</span>
+                    <span class="block text-3xl font-bold text-slate-900">1+M USD</span>
                     <span class="text-sm text-slate-500 uppercase tracking-wide font-medium">Annual sales in startup with 3 FTE</span>
                 </div>
             </div>
@@ -79,18 +79,18 @@
         <div class="max-w-7xl mx-auto grid grid-cols-1 lg:grid-cols-12 gap-16 items-start">
             <div class="lg:col-span-4 lg:sticky lg:top-24 space-y-6">
                 <div class="text-blue-400 font-semibold uppercase tracking-widest text-xs">Venture Founding</div>
-                <h3 class="text-4xl font-bold">LuxBalance: Life-Centric Lighting</h3>
+                <h3 class="text-4xl font-bold">Luxbalance | Co-Founder</h3>
                 <p class="text-slate-200 text-lg leading-relaxed">
-                    Founded a startup from 0 to $1.7M annual sales. Secured 20 proprietary IP positions globally and optimized growth for 10 million lab plants annually. Served 600+ orders. Talked to hundreds of users from the Philippines to the Netherlands and Singapore.
+                    Co-founded and self-funded from zero to $1.7M annual sales. Secured 20 proprietary IP positions globally. Optimized growth for 10 million lab plants annually. Served 600+ orders. Talked to hundreds of users from the Philippines to the Netherlands and Singapore.
                 </p>
                 <div class="flex gap-4 pt-4">
-                    <span class="px-3 py-1 bg-slate-800 rounded text-sm text-slate-300">Y-Combinator</span>
-                    <span class="px-3 py-1 bg-slate-800 rounded text-sm text-slate-300">Research</span>
-                    <span class="px-3 py-1 bg-slate-800 rounded text-sm text-slate-300">IoT</span>
+                    <span class="px-3 py-1 bg-slate-800 rounded text-sm text-slate-300">Product Strategy</span>
+                    <span class="px-3 py-1 bg-slate-800 rounded text-sm text-slate-300">User-Centric Innovation</span>
+                    <span class="px-3 py-1 bg-slate-800 rounded text-sm text-slate-300">Global Growth</span>
                 </div>
             <div class="relative pl-6 border-l-4 border-orange-500 py-2 my-6">
                 <p class="text-slate-100/ italic text-lg leading-relaxed">
-                    LuxBalance is one of the "most promising companies" (from over 15,000 startups) 
+                    One of the "most promising companies" (out of 15,000 startups) 
                 </p>
                 <a href="https://www.ycombinator.com/blog/announcing-the-startup-school-2019-grant-recipients/" target="_blank" class="text-orange-500 font-bold text-sm hover:underline mt-2 inline-block">
                     View on Y Combinator →
@@ -99,8 +99,8 @@
 
             </div>
             <div class="lg:col-span-8 space-y-4">
-                <img src="images/sensor.webp" class="w-full h-auto rounded-2xl shadow-2xl transition-transform duration-700 hover:scale-[1.02] reveal-on-scroll" alt="Circadian product">
-                <img src="images/sensor.webp" class="w-full h-auto rounded-2xl shadow-2xl transition-transform duration-700 hover:scale-[1.02] reveal-on-scroll" alt="Circadian product">
+                <img src="images/sensor.webp" class="w-full h-auto rounded-2xl shadow-2xl transition-transform duration-700 hover:scale-[1.02] reveal-on-scroll" alt="Indoor wellbeing sensor">
+                <img src="images/LedAffinity.webp" class="w-full h-auto rounded-2xl shadow-2xl transition-transform duration-700 hover:scale-[1.02] reveal-on-scroll" alt="Architectural lighting">
                 <img src="images/sensor.webp" class="w-full h-auto rounded-2xl shadow-2xl transition-transform duration-700 hover:scale-[1.02] reveal-on-scroll" alt="Circadian product">
                 <img src="images/sensor.webp" class="w-full h-auto rounded-2xl shadow-2xl transition-transform duration-700 hover:scale-[1.02] reveal-on-scroll" alt="Circadian product">
                 <img src="images/sensor.webp" class="w-full h-auto rounded-2xl shadow-2xl transition-transform duration-700 hover:scale-[1.02] reveal-on-scroll" alt="App interface">
