--- a/website2/index.html
+++ b/website2/index.html
@@ -55,7 +55,7 @@
                     <span class="text-sm text-slate-500 uppercase tracking-wide font-medium">Backed startup</span>
                 </div>
                 <div>
-                    <span class="block text-3xl font-bold text-slate-900">1+M USD</span>
+                    <span class="block text-3xl font-bold text-slate-900">1M+ USD</span>
                     <span class="text-sm text-slate-500 uppercase tracking-wide font-medium">Annual sales in startup with 3 FTE</span>
                 </div>
             </div>
@@ -93,10 +93,21 @@
                     One of the "most promising companies" (out of 15,000 startups) 
                 </p>
                 <a href="https://www.ycombinator.com/blog/announcing-the-startup-school-2019-grant-recipients/" target="_blank" class="text-orange-500 font-bold text-sm hover:underline mt-2 inline-block">
-                    View on Y Combinator →
+                    View on Y-Combinator Startup School →
                 </a>
             </div>
 
+            </div>
+            <div class="lg:col-span-8 space-y-24">
+                <div class="space-y-4">
+                    <img src="images/sensor.webp" class="w-full h-auto rounded-2xl shadow-2xl transition-transform duration-700 hover:scale-[1.01] reveal-on-scroll" alt="Indoor wellbeing sensor">
+                    <p class="text-sm font-medium text-slate-400 uppercase tracking-widest pl-2">RoomYou: Real-time CO2 & Circadian Monitoring</p>
+                </div>
+
+                <div class="space-y-4">
+                    <img src="images/LedAffinity.webp" class="w-full h-auto rounded-2xl shadow-2xl transition-transform duration-700 hover:scale-[1.01] reveal-on-scroll" alt="Architectural lighting">
+                    <p class="text-sm font-medium text-slate-400 uppercase tracking-widest pl-2">LedAffinity: Precision Architectural Integration</p>
+                </div>
             </div>
             <div class="lg:col-span-8 space-y-4">
                 <img src="images/sensor.webp" class="w-full h-auto rounded-2xl shadow-2xl transition-transform duration-700 hover:scale-[1.02] reveal-on-scroll" alt="Indoor wellbeing sensor">
