--- a/website2/index.html
+++ b/website2/index.html
@@ -98,7 +98,7 @@
             </div>
 
             </div>
-            <div class="lg:col-span-8 space-y-24">
+            <div class="lg:col-span-8 space-y-4">
                 <div class="space-y-4">
                     <img src="images/sensor.webp" class="w-full h-auto rounded-2xl shadow-2xl transition-transform duration-700 hover:scale-[1.01] reveal-on-scroll" alt="Indoor wellbeing sensor">
                     <p class="text-sm font-medium text-slate-400 uppercase tracking-widest pl-2">RoomYou: Real-time CO2 & Circadian Monitoring</p>
@@ -109,13 +109,13 @@
                     <p class="text-sm font-medium text-slate-400 uppercase tracking-widest pl-2">LedAffinity: Precision Architectural Integration</p>
                 </div>
             </div>
-            <div class="lg:col-span-8 space-y-4">
+            <!-- <div class="lg:col-span-8 space-y-4">
                 <img src="images/sensor.webp" class="w-full h-auto rounded-2xl shadow-2xl transition-transform duration-700 hover:scale-[1.02] reveal-on-scroll" alt="Indoor wellbeing sensor">
                 <img src="images/LedAffinity.webp" class="w-full h-auto rounded-2xl shadow-2xl transition-transform duration-700 hover:scale-[1.02] reveal-on-scroll" alt="Architectural lighting">
                 <img src="images/sensor.webp" class="w-full h-auto rounded-2xl shadow-2xl transition-transform duration-700 hover:scale-[1.02] reveal-on-scroll" alt="Circadian product">
                 <img src="images/sensor.webp" class="w-full h-auto rounded-2xl shadow-2xl transition-transform duration-700 hover:scale-[1.02] reveal-on-scroll" alt="Circadian product">
                 <img src="images/sensor.webp" class="w-full h-auto rounded-2xl shadow-2xl transition-transform duration-700 hover:scale-[1.02] reveal-on-scroll" alt="App interface">
-            </div>
+            </div> -->
         </div>
     </div>
 
