--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </div>
                 <div>
                     <span class="block text-3xl font-bold text-slate-900">1M+ USD</span>
-                    <span class="text-sm text-slate-500 uppercase tracking-wide font-medium font-normal">Annual sales in startup with 3 FTE</span>
+                    <span class="text-sm text-slate-500 uppercase tracking-wide font-medium font-normal">Annual sales at startup with 3 FTE</span>
                 </div>
             </div>
 
@@ -147,7 +147,7 @@
                 <div class="text-blue-400 font-bold uppercase tracking-widest text-xs">Venture Founding</div>
                 <h3 class="text-5xl font-bold leading-tight">Luxbalance | Co-Founder</h3>
                 <p class="text-slate-200 text-xl font-light leading-relaxed">
-                    Co-founded and self-funded from zero to $1.7M annual sales. Optimized growth for 10 million lab plants annually. Served 600+ orders. Talked to hundreds of users from the Philippines to the Netherlands and Singapore. Secured 20 proprietary IP positions globally. Lights used by Universities such as University to Florida to Wageningen and beyond.
+                    Co-founded and self-funded from zero to US$1.7M annual sales. Optimized growth for 10 million lab plants annually. Served 600+ orders. Talked to hundreds of users from the Philippines to the Netherlands and Singapore. Secured 20 proprietary IP positions globally. Lights used by Universities such as University to Florida to Wageningen and beyond.
                 </p>
                 
                 <div class="flex flex-wrap gap-3">
